--- a/index.html
+++ b/index.html
@@ -294,6 +294,13 @@
             }
         }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1L1ZBX1CYY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-1L1ZBX1CYY')
+    </script>
 </head>
 
 <body>
