--- a/index.html
+++ b/index.html
@@ -294,6 +294,20 @@
                 margin: 0 auto;
             }
 
+            #home div {
+                text-align: center !important;
+            }
+
+            .cta-button {
+                display: block;
+                width: 100%;
+                margin: 12px 0 0 0 !important;
+            }
+
+            .cta-button:first-child {
+                margin-top: 0 !important;
+            }
+
             #about {
                 flex-direction: column;
                 text-align: center;
