--- a/index.html
+++ b/index.html
@@ -268,6 +268,88 @@
             }
         }
 
+        /* Style spécial pour la photo de la section home avec fond stylisé */
+        .home-photo-bg {
+            position: relative;
+            width: 320px;
+            min-width: 220px;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+        }
+
+        .home-photo-bg .bg-shape {
+            position: absolute;
+            left: 0;
+            top: 20px;
+            width: 260px;
+            height: 160px;
+            background: #00BFFF;
+            border-radius: 120px 80px 120px 80px / 80px 120px 80px 120px;
+            z-index: 1;
+            opacity: 0.85;
+        }
+
+        .home-photo-bg img {
+            position: relative;
+            z-index: 2;
+            width: 220px;
+            height: 320px;
+            object-fit: contain;
+            background: transparent;
+            border: none;
+            box-shadow: none;
+        }
+
+        .home-photo-bg .bg-line {
+            position: absolute;
+            left: 10px;
+            right: 10px;
+            bottom: 0;
+            height: 6px;
+            background: #00BFFF;
+            border-radius: 3px;
+            z-index: 0;
+        }
+
+        @media (max-width: 900px) {
+            .home-photo-bg {
+                width: 180px;
+                min-width: 120px;
+            }
+
+            .home-photo-bg .bg-shape {
+                width: 140px;
+                height: 90px;
+                left: 0;
+                top: 10px;
+            }
+
+            .home-photo-bg img {
+                width: 120px;
+                height: 180px;
+            }
+        }
+
+        @media (max-width: 700px) {
+            .home-photo-bg {
+                margin: 0 auto 20px auto;
+                width: 120px;
+            }
+
+            .home-photo-bg .bg-shape {
+                width: 90px;
+                height: 60px;
+                left: 0;
+                top: 10px;
+            }
+
+            .home-photo-bg img {
+                width: 80px;
+                height: 120px;
+            }
+        }
+
         /* Responsive Navbar */
         @media (max-width: 900px) {
             header {
@@ -397,9 +479,12 @@
 
     <section id="home" class="hero"
         style="flex-direction: row; justify-content: center; align-items: center; gap: 40px;">
-        <img src="bavon.JPG" alt="Gabriel Bavon portrait" class="photo-animated"
-            style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 3px solid var(--primary); box-shadow: 0 4px 24px rgba(0,0,0,0.15); background: transparent;">
-        <div style="text-align: left; max-width: 600px;">
+        <div class="home-photo-bg">
+            <div class="bg-shape"></div>
+            <img src="bavon.png" alt="Gabriel Bavon portrait">
+            <div class="bg-line"></div>
+        </div>
+        <div style="text-align: left; max-width: 600px; position: relative; z-index: 2;">
             <h1>Bonjour, je suis <span>Gabriel Bavon</span></h1>
             <p>Développeur passionné spécialisé en applications web et desktop. J’aide les entreprises à créer des
                 solutions performantes et intuitives.</p>
